2005-03-19  Joseph S. Myers  <joseph@codesourcery.com>

	* c.opt (ansi, std=iso9899:1990, std=iso9899:1999,
	std=iso9899:199x): Correct descriptions.

2005-03-19  Andy Hutchinson  <HutchinsonAndy@netscape.net>

	PR target/18251
	* config/avr/avr.md (movstrhi): Rewrite as RTL loop.
	(*movstrqi_insn): Delete.
	(*movstrhi): Delete.

2005-03-17  Richard Sandiford  <rsandifo@redhat.com>

	PR rtl-optimization/19683
	* reload1.c (choose_reload_regs): Pass the number of bits, not the
	number of bytes, to smallest_int_for_mode.  Fix arguments to
	REG_CANNOT_CHANGE_MODE_P.

2005-03-17  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/linux-unwind.h: New file backported from gcc-4.0.
	* config/rs6000/linux.h: #include linux-unwind.h in place of all
	unwind support in this file.
	* config/rs6000/linux64.h: Likewise.

2005-03-16  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/17825
	Backport from mainline
	2004-11-27  Jakub Jelinek  <jakub@redhat.com>
	* combine.c (subst): Ignore STRICT_LOW_PART no matter if REG_P (new)
	or not.

2005-03-16  Roger Sayle  <roger@eyesopen.com>

	PR target/18371
	Backport from mainline
	2004-12-19  Steven Bosscher  <stevenb@suse.de>
	* config/i386/i386.c (ix86_split_to_parts): Use an array with
	four elements for decoding a CONST_DOUBLE on 64 bits targets.

2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* config.gcc: Remove excess indentation.
	(powerpc*-*-*, rs6000-*-*): Accept --with-cpu/tune power5.

2005-03-13  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	PR target/20288
	* config/avr/avr.c (print_operand): Add 'p' and 'r'.
	(out_movhi_r_mr): Read low byte of volatile MEM first.
	(out_movhi_mr_r): Write high byte of volatile MEM first.

2005-03-10  Aldy Hernandez  <aldyh@redhat.com>

        * doc/invoke.texi: Add 8540 to list of cpus in rs6000 cpu section.

2005-03-08  James E Wilson  <wilson@specifixinc.com>

	Backport from mainline
	2004-04-13  James E Wilson  <wilson@specifixinc.com>
	PR middle-end/20364